<resources>
    <string name="app_name">PolishQuizApp</string>
    <string name="quiz_description">Answer few simple questions and find out if you could survive in Poland!</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="question_one">1. What is the name of a typical Polish guy, who wears a tracksuit?</string>
    <string name="misza">Misza</string>
    <string name="pawel">Paweł</string>
    <string name="seba">Seba</string>
    <string name="question_two">2. What time did the Pope John Paul II died?</string>
    <string name="_22_18">22:18</string>
    <string name="_21_37">21:37</string>
    <string name="_17_21">17:21</string>
    <string name="question_three">3. Which animal do you associate with Arka Gdynia football team?</string>
    <string name="pig">pig</string>
    <string name="seal">seal</string>
    <string name="bear">bear</string>
    <string name="question_four">4. Which vodkas are gluten free?</string>
    <string name="soplica">Soplica</string>
    <string name="luksusowa">Luksusowa</string>
    <string name="absolwent">Absolwent</string>
    <string name="question_five">5. What is the Polish food speciality?</string>
    <string name="fried_cheese">Fried cheese</string>
    <string name="schnitzel">Schnitzel</string>
    <string name="dumplings">Dumplings</string>
    <string name="question_six">6. What is the problem of a typical Polish mother?</string>
    <string name="sick_daughter">Sick daughter</string>
    <string name="hiperactive_son">Hiperactive son</string>
    <string name="stupid_husband">Stupid husband</string>
    <string name="question_seven">7. How many dishes should you prepare for a proper Christmas Eve dinner?</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_12">12</string>
    <string name="question_eight">8. What does the stork bring?</string>
    <string name="babies">Babies</string>
    <string name="money">Money</string>
    <string name="frogs">Frogs</string>
    <string name="question_nine">9. Which fashion accessory is characteristic for an old religious lady ?</string>
    <string name="woolen_hat">Woolen hat</string>
    <string name="mohair_beret">Mohair beret</string>
    <string name="leather_mittens">Leather mittens</string>
    <string name="question_ten">10. Which city should be excluded from Poland?</string>
    <string name="zamosc">Zamość</string>
    <string name="sosnowiec">Sosnowiec</string>
    <string name="mikolajki">Mikołajki</string>
    <string name="show_my_result">Show my result</string>
    <string name="reset">Reset</string>
    <string name="j_a_baczewski">J.A.Baczewski</string>
    <string name="type_your_answer_here">Type your answer here</string>
    <string name="points">/10 points</string>
    <string name="description_1p1">Dear \u0020</string>
    <string name="description_1p2">, you got only \u0020</string>
    <string name="description_1p3">\u0020 points.</string>
    <string name="description_1p4">\u0020 For safety reasons don\'t go to</string>
    <string name="description_1p5">\u0020 Poland alone. Try eating some pierogi,</string>
    <string name="description_1p6">\u0020 listen to disco polo and see how it feels.</string>
    <string name="description_2p1">Not bad, \u0020</string>
    <string name="description_2p2">. You got \u0020</string>
    <string name="description_2p3">\u0020 points.</string>
    <string name="description_2p4">\u0020 You could probably survive in Poland for a while. Consider renting an Opel</string>
    <string name="description_2p5">\u0020 and exploring Mazury.</string>
    <string name="description_3p1">Well done \u0020 </string>
    <string name="description_3p2">! You got \u0020</string>
    <string name="description_3p3">\u0020 points.</string>
    <string name="description_3p4">\u0020 Looks like you know how to get 500+</string>
    <string name="description_3p5">\u0020 and find the best deals on Olx.</string>
    <string name="description_3p6">\u0020 You can move back to Poland as soon as</string>
    <string name="description_3p7">\u0020 they kick you out of Britain...</string>
    <string name="type_name">Please write your name</string>

</resources>
